take apart the self config endpoint
